--- a/Postall/Postall/Base.lproj/Main.storyboard
+++ b/Postall/Postall/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FA4-8z-hrP">
-    <device id="ipad10_5" orientation="portrait" layout="fullscreen" appearance="light"/>
+    <device id="ipad10_5" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -14,11 +14,11 @@
             <objects>
                 <viewController id="b6B-C9-Kii" customClass="ViewController" customModule="Postall" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eNQ-l8-xQb">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="791.5" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="drO-3X-C7N">
-                                <rect key="frame" x="0.0" y="1062" width="834" height="50"/>
+                                <rect key="frame" x="0.0" y="784" width="791.5" height="50"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Kxv-AD-B9B"/>
@@ -44,19 +44,24 @@
                                     <outlet property="delegate" destination="b6B-C9-Kii" id="jgM-2F-sqm"/>
                                 </connections>
                             </collectionView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="d61-Sj-Tku">
-                                <rect key="frame" x="36" y="273" width="763" height="562"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="d61-Sj-Tku">
+                                <rect key="frame" x="20" y="51" width="752" height="724"/>
                                 <color key="tintColor" systemColor="systemGray3Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="d61-Sj-Tku" secondAttribute="height" multiplier="0.8:1" constant="170.79999999999995" id="wfK-Xu-XJa"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Zga-95-cDZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="d61-Sj-Tku" firstAttribute="centerX" secondItem="eNQ-l8-xQb" secondAttribute="centerX" id="31e-3g-gH6"/>
+                            <constraint firstItem="d61-Sj-Tku" firstAttribute="centerY" secondItem="eNQ-l8-xQb" secondAttribute="centerY" constant="-3.75" id="3dj-RQ-ugU"/>
                             <constraint firstItem="drO-3X-C7N" firstAttribute="leading" secondItem="Zga-95-cDZ" secondAttribute="leading" id="L8v-Kc-Xo8"/>
-                            <constraint firstItem="Zga-95-cDZ" firstAttribute="trailing" secondItem="d61-Sj-Tku" secondAttribute="trailing" constant="35" id="T40-qA-bj9"/>
-                            <constraint firstItem="d61-Sj-Tku" firstAttribute="top" secondItem="Zga-95-cDZ" secondAttribute="top" constant="222" id="bGU-Wy-Oab"/>
-                            <constraint firstItem="drO-3X-C7N" firstAttribute="top" secondItem="d61-Sj-Tku" secondAttribute="bottom" constant="225.5" id="bmk-51-51Y"/>
-                            <constraint firstItem="d61-Sj-Tku" firstAttribute="leading" secondItem="Zga-95-cDZ" secondAttribute="leading" constant="36" id="izu-wm-dTw"/>
+                            <constraint firstItem="Zga-95-cDZ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="d61-Sj-Tku" secondAttribute="trailing" constant="20" id="T40-qA-bj9"/>
+                            <constraint firstItem="d61-Sj-Tku" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Zga-95-cDZ" secondAttribute="top" id="bGU-Wy-Oab"/>
+                            <constraint firstItem="drO-3X-C7N" firstAttribute="top" relation="greaterThanOrEqual" secondItem="d61-Sj-Tku" secondAttribute="bottom" constant="7.5" id="bmk-51-51Y"/>
+                            <constraint firstItem="d61-Sj-Tku" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Zga-95-cDZ" secondAttribute="leading" constant="20" id="izu-wm-dTw"/>
                             <constraint firstItem="Zga-95-cDZ" firstAttribute="bottom" secondItem="drO-3X-C7N" secondAttribute="bottom" id="jdq-38-o26"/>
                             <constraint firstItem="drO-3X-C7N" firstAttribute="trailing" secondItem="Zga-95-cDZ" secondAttribute="trailing" id="mui-4c-dvd"/>
                         </constraints>
@@ -69,14 +74,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nfF-Ft-Ldl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="669.56521739130437" y="385.71428571428572"/>
+            <point key="canvasLocation" x="669.06474820143887" y="385.61151079136692"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="P5n-0J-okb">
             <objects>
                 <tableViewController clearsSelectionOnViewWillAppear="NO" id="9gF-vg-F51" customClass="FontsViewController" customModule="Postall" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Wp8-G2-h1J">
-                        <rect key="frame" x="0.0" y="0.0" width="420" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="420" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
@@ -144,7 +149,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OaF-jY-tHz" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HNc-JE-mTB">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="50"/>
+                        <rect key="frame" x="0.0" y="0.0" width="791.5" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
